# UEAT

./: .gitignore  README.md
code/: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  fipi_parsed_katex.json  fipi_parsed_katex_with_solutions.json  pyproject.toml
code/admin/: app.py  monitor.py  schemas.py  store.py
code/admin/routes/: callbacks.py  monitoring.py  proxy.py  tasks.py
code/admin/static/: app.js  index.html  style.css
code/app/: .env.example  README.md  main.py
code/app/api/: __init__.py
code/app/core/: __init__.py  config.py  logging.py
code/app/data/: atoms_t10.yaml  atoms_t10_applicable_tasks.yaml  atoms_t12.yaml  atoms_t12_applicable_tasks.yaml  atoms_t13.yaml  atoms_t13_applicable_tasks.yaml  atoms_t16.yaml  atoms_t16_applicable_tasks.yaml  atoms_t6.yaml  atoms_t6_applicable_tasks.yaml  conspect_eval_rules.yaml  conspect_prompts.yaml  misconceptions.yaml
code/app/domain/: __init__.py  analysis.py  atom.py  atoms.py  profile.py  subtypes.py
code/app/infrastructure/: __init__.py
code/k8s/: README.md  admin.yaml  api.yaml  configmap.yaml  conspect-worker.yaml  deps-postgres.yaml  deps-qdrant.yaml  deps-redpanda.yaml  eval-worker.yaml  ingress.yaml  migrations-job.yaml  secret.example.yaml
code/tests/: conftest.py  test_analysis.py  test_conspect_quality.py  test_conspect_structure.py  test_conspect_tools.py  test_eval_worker.py  test_mathml_to_latex.py  test_platform_client.py  test_profile.py  test_profile_materializer.py  test_submission_store.py
(+208 files in other folders)
